made improvements to the land page and login screens

--- a/landing page/index.html
+++ b/landing page/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="image">
-                <img src="HJ Learning.gif" alt="">
+                <img src="classroom-animate.svg" alt="">
             </div>
             <div class="text-chamada">
                 <div class="box_left">
