--- a/login/logindark.html
+++ b/login/logindark.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="logindark.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     <header>
@@ -35,6 +35,7 @@
                         </div>
                         <input type="submit" value="login" class="btn-login" >
                     </form>
+                    <p>DON'T HAVE AN ACCOUNT? <a href="#">REGISTER HERE!</a></p>
                 </div>
             </div>
         </div>
